migrate settings to github

--- a/web/ja/lastaflute/tutorial/laimpl.html
+++ b/web/ja/lastaflute/tutorial/laimpl.html
@@ -146,7 +146,7 @@
 	</p>
 	<div class="relatedpage"><a href="../../tutorial/onjava8.html#jflutableeclipse">DBFlute補完テンプレートを入れたEclipse</a></div>
 	<dl class="shortkeymainlist">
-		<dt>補完テンプレート</dt><dd><a href="http://dbflute.seasar.org/download/misc/settings/dbflute-eclipse-editor-templates.zip">dbflute-eclipse-editor-templates.zip</a> <span class="frm">(既存設定を残しつつそのままImport)</span></dd>
+		<dt>補完テンプレート</dt><dd><a href="https://dbflute.org/meta/friends/eclipse/dbflute-eclipse-editor-templates.zip">dbflute-eclipse-editor-templates.zip</a> <span class="frm">(既存設定を残しつつそのままImport)</span></dd>
 	</dl>
 	<h3 id="ifintellij">IDE, もし IntelliJ なら...</h3>
 	<p>
