--- a/web/ja/manual/topic/friends/eclipse/environment/recomproj.html
+++ b/web/ja/manual/topic/friends/eclipse/environment/recomproj.html
@@ -89,7 +89,7 @@
 		以下のURLから、DBFluteスタイルのフォーマット定義xmlをダウンロードしましょう。
 	</p>
 	<p>
-		<em class="mark"><a href="http://dbflute.seasar.org/download/misc/settings/dbflute-eclipse-code-formatter.zip">dbflute-eclipse-code-formatter.zip</a></em>
+		<em class="mark"><a href="https://dbflute.org/meta/friends/eclipse/dbflute-eclipse-code-formatter.zip">dbflute-eclipse-code-formatter.zip</a></em>
 	</p>
 	<p>
 		そして、プロジェクトの Properties の <em class="keyword">Java Code Style - Formatter</em> を開きます。
