--- a/web/ja/manual/topic/friends/eclipse/environment/recomwork.html
+++ b/web/ja/manual/topic/friends/eclipse/environment/recomwork.html
@@ -85,7 +85,7 @@ String sea = ...
 		そういった指定が特にない...もしくは「よくわからない」なら、以下からテンプレートファイルをダウンロードして、Importのまるごと入れ替え方式で設定しましょう。
 	</p>
 	<p>
-		<em class="mark"><a href="http://dbflute.seasar.org/download/misc/settings/whole-eclipse-editor-templates.zip">whole-eclipse-editor-templates.zip</a></em>
+		<em class="mark"><a href="https://dbflute.org/meta/friends/eclipse/whole-eclipse-editor-templates.zip">whole-eclipse-editor-templates.zip</a></em>
 	</p>
 	<div class="relatedpage"><a href="../coding/templates.html#importwhole">エディターテンプレート - Importのまるごと入れ替え方式</a></div>
 	<h3 id="importtemplatexml">Importのまるごと入れ替え方式での設定</h3>
