--- a/web/ja/tutorial/eclipse/dfclipsecomp.html
+++ b/web/ja/tutorial/eclipse/dfclipsecomp.html
@@ -449,7 +449,7 @@ seaList.stream().filter(<span class="abbreviation">...</span>).collect(Collector
 		そういった指定が特にない...もしくは「よくわからない」なら、以下からテンプレートファイルをダウンロードして、まるごと入れ替え方式で import しましょう。
 	</p>
 	<dl class="lolongkeymainlist">
-		<dt><a href="http://dbflute.seasar.org/download/misc/settings/whole-eclipse-editor-templates.zip">whole-eclipse-editor-templates.zip</a></dt><dd><span class="frm">※最新のDBFlute補完テンプレートファイルです</span></dd>
+		<dt><a href="https://dbflute.org/meta/friends/eclipse/whole-eclipse-editor-templates.zip">whole-eclipse-editor-templates.zip</a></dt><dd><span class="frm">※最新のDBFlute補完テンプレートファイルです</span></dd>
 	</dl>
 	<h3 id="importwholeway">まるごと入れ替え方式のやり方</h3>
 	<p>
