--- a/web/ja/tutorial/onjava8.html
+++ b/web/ja/tutorial/onjava8.html
@@ -674,7 +674,7 @@ memberList.forEach(<span class="subpoint">member -&gt; {</span> <span class="com
 		がスムーズに補完できるようになるので、もしよかったらぜひ活用してみてください。
 	</p>
 	<dl class="longvaluemainlist">
-		<dt>補完テンプレート</dt><dd><a href="http://dbflute.seasar.org/download/misc/settings/dbflute-eclipse-editor-templates.zip">dbflute-eclipse-editor-templates.zip</a></dd>
+		<dt>補完テンプレート</dt><dd><a href="https://dbflute.org/meta/friends/eclipse/dbflute-eclipse-editor-templates.zip">dbflute-eclipse-editor-templates.zip</a></dd>
 	</dl>
 	<p>
 		ダウンロードして解凍したXMLファイルを、workspaceの設定 (メニューの Windows - Preferences) の Java - Editor - Templates
