upgrade intellij live templates

--- a/web/ja/manual/topic/friends/intellij/index.html
+++ b/web/ja/manual/topic/friends/intellij/index.html
@@ -369,14 +369,13 @@
 	</p>
 	<div class="relatedpage"><a href="../../../../tutorial/onjava8.html#jflutableeclipse">DBFlute補完テンプレートを入れたEclipse</a></div>
 	<p>
-		まず、以下のjarファイルをダウンロードしましょう。
-		<span class="frm">(Google Chromeの場合、クリックしても反応しないなど、ダウンロードがブロックされる可能性があるようです。リンクのアドレスをコピーしてアドレスバーで直接指定するか...他のブラウザでダウンロードするか...何かしら工夫を)</span>
+		まず、以下の zipファイルをダウンロードしましょう。<span class="frm">(2025/07/25更新)</span>
 	</p>
 	<dl class="longvaluemainlist">
-		<dt>補完テンプレート</dt><dd><a href="https://dbflute.org/meta/friends/intellij/dbflute-intellij-live-templates.jar">dbflute-intellij-live-templates.jar</a></dd>
+		<dt>補完テンプレート</dt><dd><a href="https://dbflute.org/meta/friends/intellij/dbflute-intellij-live-templates.zip">dbflute-intellij-live-templates.zip</a></dd>
 	</dl>
 	<p>
-		IntelliJでのメニューの File - (Manage IDE Settings) - Import Setttings... で、その jar ファイルを指定して <em class="keyword">Live Templates だけ選択して</em> import すれば利用できます。
+		IntelliJでのメニューの File - (Manage IDE Settings) - Import Setttings... で、その zipファイルを指定して <em class="keyword">Live Templates だけ選択して</em> import すれば利用できます。
 		<span class="frm">(注意: Live Templates 以外を選択すると、ご自身の設定が上書きされる可能性があります)</span>
 	</p>
 	<p>
