fix, 注意: zipファイルのまま import しましょう

--- a/web/ja/manual/topic/friends/intellij/index.html
+++ b/web/ja/manual/topic/friends/intellij/index.html
@@ -376,7 +376,7 @@
 	</dl>
 	<p>
 		IntelliJでのメニューの File - (Manage IDE Settings) - Import Setttings... で、その zipファイルを指定して <em class="keyword">Live Templates だけ選択して</em> import すれば利用できます。
-		<span class="frm">(注意: Live Templates 以外を選択すると、ご自身の設定が上書きされる可能性があります)</span>
+		<span class="frm">(注意: zipファイルのまま import しましょう)</span>
 	</p>
 	<p>
 		裏技は使えませんが、アンスコで始まる系の補完はほとんどそのまま利用できます。_ll, _li
