--- a/web/ja/tutorial/onjava8.html
+++ b/web/ja/tutorial/onjava8.html
@@ -725,11 +725,10 @@ memberList.forEach(<span class="subpoint">member -&gt; {</span> <span class="com
 		まず、以下の zipファイルをダウンロードしましょう。<span class="frm">(2025/07/25更新)</span>
 	</p>
 	<dl class="longvaluemainlist">
-		<dt>補完テンプレート</dt><dd><a href="https://dbflute.org/meta/friends/intellij/dbflute-intellij-live-templates.zip">dbflute-intellij-live-templates.zip</a></dd>
+		<dt>補完テンプレート</dt><dd><a href="https://dbflute.org/meta/friends/intellij/dbflute-intellij-live-templates.jar">dbflute-intellij-live-templates.jar</a></dd>
 	</dl>
 	<p>
-		IntelliJでのメニューの File - (Manage IDE Settings) - Import Settings... で、その zipファイルを指定して <em class="keyword">Live Templates だけ選択して</em> import すれば利用できます。
-		<span class="frm">(注意: Live Templates 以外を選択すると、ご自身の設定が上書きされる可能性があります)</span>
+		IntelliJでのメニューの File - (Manage IDE Settings) - Import Settings... で、その jarファイルを指定して import すれば利用できます。
 	</p>
 	<p>
 		裏技は使えませんが、アンスコで始まる系の補完はほとんどそのまま利用できます。_ll, _li
