organize IntelliJ links

--- a/web/ja/lastaflute/tutorial/laimpl.html
+++ b/web/ja/lastaflute/tutorial/laimpl.html
@@ -150,12 +150,9 @@
 	</dl>
 	<h3 id="ifintellij">IDE, もし IntelliJ なら...</h3>
 	<p>
-		IntelliJでも、補完テンプレートあります。<span class="frm">(ただ、Eclipse版よりもちょっと機能が少ないです)</span>
+		IntelliJでも、補完テンプレートあります。
 	</p>
-	<div class="relatedpage"><a href="../../tutorial/onjava8.html#intellij">さあ、補完してみよう！ - IntelliJ IDEA なら</a></div>
-	<dl class="shortkeymainlist">
-		<dt>補完テンプレート</dt><dd><a href="https://dbflute.org/meta/friends/intellij/dbflute-intellij-live-templates.jar">dbflute-intellij-live-templates.jar</a> <span class="frm">(既存設定を残しつつそのままImport)</span></dd>
-	</dl>
+	<div class="detailpage"><a href="../../manual/topic/friends/intellij/index.html#dbflutelivetemplate">Friends - IntelliJ - DBFlute な Live Template</a></div>
 	<h3 id="othererd">ERDツールは別のでもOK</h3>
 	<p>
 		ER図を描くのに ERFlute でなくても構いません。別のツールでも、要は生成された DDL を replace-schema-10-basic.sql
