--- a/web/ja/manual/topic/friends/intellij/index.html
+++ b/web/ja/manual/topic/friends/intellij/index.html
@@ -367,7 +367,7 @@
 	<p>
 		DBFluteが提供している Eclipse の Editor Templates の IntelliJ 版を提供しています。
 	</p>
-	<div class="relatedpage"><a href="../../../../tutorial/onjava8.html#jflutableeclipse">DBFlute補完テンプレートを入れたEclipse</a></div>
+	<div class="relatedpage"><a href="../../../../tutorial/eclipse/dfclipsecomp.html">DBFluteのEclipseコード補完</a></div>
 	<p>
 		まず、以下の jarファイルをダウンロードしましょう。<span class="frm">(2025/07/25更新)</span>
 	</p>
