--- a/web/ja/tutorial/onjava8.html
+++ b/web/ja/tutorial/onjava8.html
@@ -721,22 +721,7 @@ memberList.forEach(<span class="subpoint">member -&gt; {</span> <span class="com
 	<p>
 		同じテンプレートが、IntelliJ IDEA でも使えます！
 	</p>
-	<p>
-		まず、以下の zipファイルをダウンロードしましょう。<span class="frm">(2025/07/25更新)</span>
-	</p>
-	<dl class="longvaluemainlist">
-		<dt>補完テンプレート</dt><dd><a href="https://dbflute.org/meta/friends/intellij/dbflute-intellij-live-templates.jar">dbflute-intellij-live-templates.jar</a></dd>
-	</dl>
-	<p>
-		IntelliJでのメニューの File - (Manage IDE Settings) - Import Settings... で、その jarファイルを指定して import すれば利用できます。
-	</p>
-	<p>
-		裏技は使えませんが、アンスコで始まる系の補完はほとんどそのまま利用できます。_ll, _li
-		をぜひ活用していきましょう！Eclipseよりも使いやすくなっている部分もあります。
-	</p>
-	<p>
-		Deco, Hakiba, thank you for your migration from Eclipse.
-	</p>
+	<div class="detailpage"><a href="../manual/topic/friends/intellij/index.html#dbflutelivetemplate">Friends - IntelliJ - DBFlute な Live Template</a></div>
 
 	<h2 id="naming">たかが変数名、されど変数名</h2>
 	<p>
