--- a/web/ja/manual/topic/friends/intellij/index.html
+++ b/web/ja/manual/topic/friends/intellij/index.html
@@ -363,24 +363,52 @@
 		などをしないといけないので、多くの人が "Import Project" を使うでしょう。
 	</p>
 
-	<h2 id="dbflutelivetemplate">DBFlute な Live Template</h2>
+	<h2 id="dbflutelivetemplate">DBFlute な Live Templates</h2>
 	<p>
 		DBFluteが提供している Eclipse の Editor Templates の IntelliJ 版を提供しています。
 	</p>
 	<div class="relatedpage"><a href="../../../../tutorial/eclipse/dfclipsecomp.html">DBFluteのEclipseコード補完</a></div>
+	<h3 id="dbflutelivetemplatedownload">設定ファイルのダウンロード</h3>
 	<p>
 		まず、以下の jarファイルをダウンロードしましょう。<span class="frm">(2025/07/25更新)</span>
 	</p>
 	<dl class="longvaluemainlist">
 		<dt>補完テンプレート</dt><dd><a href="https://dbflute.org/meta/friends/intellij/dbflute-intellij-live-templates.jar">dbflute-intellij-live-templates.jar</a></dd>
 	</dl>
+	<h3 id="dbflutelivetemplateimport">設定ファイルのimport</h3>
 	<p>
 		IntelliJでのメニューの File - (Manage IDE Settings) - Import Setttings... で、その jarファイルを指定して import すれば利用できます。
 	</p>
+	<p class="imgbox">
+		<a href="../../../../data/model/friends/intellij/livetemplates/friends-IntelliJ-LiveTemplates-importflow10-menu_import.png" title="IntelliJ LiveTemplates menu_import"><img src="../../../../data/model/friends/intellij/livetemplates/friends-IntelliJ-LiveTemplates-importflow10-menu_import.png" alt="IntelliJ LiveTemplates menu_import" width="550" height="420" /></a>
+	</p>
+	<p class="imgbox">
+		<a href="../../../../data/model/friends/intellij/livetemplates/friends-IntelliJ-LiveTemplates-importflow20-select_jar.png" title="IntelliJ LiveTemplates select_jar"><img src="../../../../data/model/friends/intellij/livetemplates/friends-IntelliJ-LiveTemplates-importflow20-select_jar.png" alt="IntelliJ LiveTemplates select_jar" width="550" height="320" /></a>
+	</p>
+	<p class="imgbox">
+		<a href="../../../../data/model/friends/intellij/livetemplates/friends-IntelliJ-LiveTemplates-importflow30-livetemplate_check.png" title="IntelliJ LiveTemplates livetemplate_check"><img src="../../../../data/model/friends/intellij/livetemplates/friends-IntelliJ-LiveTemplates-importflow30-livetemplate_check.png" alt="IntelliJ LiveTemplates livetemplate_check" width="550" height="320" /></a>
+	</p>
 	<p>
-		裏技は使えませんが、アンスコで始まる系の補完はほとんどそのまま利用できます。_ll, _li
+		↓設定を反映させるためにIntelliJのRestartが求められますのでRestartしましょう。
+	</p>
+	<p class="imgbox">
+		<a href="../../../../data/model/friends/intellij/livetemplates/friends-IntelliJ-LiveTemplates-importflow40-restart_intellij.png" title="IntelliJ LiveTemplates restart_intellij"><img src="../../../../data/model/friends/intellij/livetemplates/friends-IntelliJ-LiveTemplates-importflow40-restart_intellij.png" alt="IntelliJ LiveTemplates restart_intellij" width="550" height="220" /></a>
+	</p>
+	<p>
+		↓IntelliJ の Preferences (Macだと "command+カンマ" のショートカットで表示できる) にて、DBFlute や jflute というカテゴリの Live Templates があればimportは成功です。
+	</p>
+	<p class="imgbox">
+		<a href="../../../../data/model/friends/intellij/livetemplates/friends-IntelliJ-LiveTemplates-importflow50-preferences_confirmation.png" title="IntelliJ LiveTemplates preferences_confirmation"><img src="../../../../data/model/friends/intellij/livetemplates/friends-IntelliJ-LiveTemplates-importflow50-preferences_confirmation.png" alt="IntelliJ LiveTemplates preferences_confirmation" width="550" height="420" /></a>
+	</p>
+	<h3 id="dbflutelivetemplatesupplement">ぜひ使ってみてください</h3>
+	<p>
+		Eclipse版では存在していた "裏技" は使えませんが、アンスコで始まる系の補完はほとんどそのまま利用できます。_ll, _li
 		をぜひ活用していきましょう！Eclipseよりも使いやすくなっている部分もあります。
 	</p>
+	<p>
+		使える補完は、こちらのページにてまとまっています。
+	</p>
+	<div class="detailpage"><a href="../../../../tutorial/eclipse/dfclipsecomp.html">DBFluteのEclipseコード補完</a></div>
 	<p>
 		Deco, Hakiba, thank you for your migration from Eclipse.
 	</p>
