--- a/web/ja/manual/topic/friends/intellij/index.html
+++ b/web/ja/manual/topic/friends/intellij/index.html
@@ -363,11 +363,14 @@
 		などをしないといけないので、多くの人が "Import Project" を使うでしょう。
 	</p>
 
-	<h2 id="dbflutelivetemplate">DBFlute な Live Templates</h2>
+	<h2 id="dbflutelivetemplate">DBFlute な IntelliJ 補完テンプレート</h2>
 	<p>
 		DBFluteが提供している Eclipse の Editor Templates の IntelliJ 版を提供しています。
 	</p>
 	<div class="relatedpage"><a href="../../../../tutorial/eclipse/dfclipsecomp.html">DBFluteのEclipseコード補完</a></div>
+	<p>
+		IntelliJ だと　Live Templates と呼びます。
+	</p>
 	<h3 id="dbflutelivetemplatedownload">設定ファイルのダウンロード</h3>
 	<p>
 		まず、以下の jarファイルをダウンロードしましょう。<span class="frm">(2025/07/25更新)</span>
