fix typo: to tableExceptList

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -46,7 +46,7 @@
             <li>DBFlute Engine: documentMap.dfprop, deprecatedTableMap #261 <span class="frm">*前回パッチ</span></li>
             <li>DBFlute Engine: documentMap, isDbCommentNumberAliasTreatedAsDescription #258 <span class="frm">*前回パッチ</span></li>
             <li>DBFlute Engine: LoadDataReverse, tableTargetList #253 <span class="frm">*前回パッチ</span></li>
-            <li>DBFlute Engine: SchemaSyncCheck, talbeExceptList #252 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: SchemaSyncCheck, tableExceptList #252 <span class="frm">*前回パッチ</span></li>
             <li>DBFlute Engine: LoadDataReverse,isFrameworkDebug for e.g. table order #252 <span class="frm">*前回パッチ</span></li>
             <li>DBFlute Engine: PropertiesHTML, isSuppressPropertiesHtmlGenerateForcedly #251 <span class="frm">*前回パッチ</span></li>
             <li>DBFlute Engine: SchemaSyncCheck, ignore diff pieces #250 <span class="frm">*前回パッチ</span></li>
@@ -75,7 +75,7 @@
             <li>DBFlute Engine: documentMap.dfprop, deprecatedTableMap #261 <span class="frm">*2025/07/26パッチ</span></li>
             <li>DBFlute Engine: documentMap, isDbCommentNumberAliasTreatedAsDescription #258 <span class="frm">*2025/07/26パッチ</span></li>
             <li>DBFlute Engine: LoadDataReverse, tableTargetList #253 <span class="frm">*2025/06/29パッチ</span></li>
-            <li>DBFlute Engine: SchemaSyncCheck, talbeExceptList #252 <span class="frm">*2025/06/29パッチ</span></li>
+            <li>DBFlute Engine: SchemaSyncCheck, tableExceptList #252 <span class="frm">*2025/06/29パッチ</span></li>
             <li>DBFlute Engine: LoadDataReverse,isFrameworkDebug for e.g. table order #252 <span class="frm">*2025/06/29パッチ</span></li>
             <li>DBFlute Engine: PropertiesHTML, isSuppressPropertiesHtmlGenerateForcedly #251 <span class="frm">*2025/06/29パッチ</span></li>
             <li>DBFlute Engine: SchemaSyncCheck, ignore diff pieces #250 <span class="frm">*2025/06/29パッチ</span></li>
