add blog for DBFlute-1.3.0

--- a/web/index.ja.html
+++ b/web/index.ja.html
@@ -29,7 +29,7 @@
 		<div id="leftpart">
 			<h2>News</h2>
 			<ul>
-				<li><span class="date">2025/08/11</span>DBFlute-1.3.0 (Java8対応) をリリースしました。</li>
+				<li><span class="date">2025/08/11</span><a href="https://jflute.hatenadiary.jp/entry/20250811/release130">DBFlute-1.3.0 (Java8対応)</a> をリリースしました。</li>
 				<li><span class="date">2025/05/23</span>DBFlute-1.2.9 (Java8対応) をリリースしました。</li>
 				<li><span class="date">2021/01/01</span><a href="https://jflute.hatenadiary.jp/entry/20210101/release124">DBFlute-1.2.4 (Java8対応)</a> をリリースしました。</li>
 				<li><span class="date">2020/01/01</span><a href="https://jflute.hatenadiary.jp/entry/20200101/release122">DBFlute-1.2.2 (Java8対応)</a> をリリースしました。</li>
