add documentMap.dfprop, isSuppressCheckingSchemaNameDiff

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -37,6 +37,7 @@
             <li>DBFlute Runtime: improve DBMeta, comment and new items #259</li>
             <li>DBFlute Runtime: invokeQuery() supports emptyStringQuery #256</li>
             <li>DBFlute Runtime: improve DfPropFile exception message of expected list/map #247</li>
+            <li>DBFlute Engine: documentMap.dfprop, isSuppressCheckingSchemaNameDiff #274</li>
             <li>DBFlute Intro: decomment, ignore database comment conflict when database comment deleted #272 <span class="frm">*前回パッチ</span></li>
             <li>DBFlute Intro: decomment, database comment conflict cannot be resolved by rear line separator #271 <span class="frm">*前回パッチ</span></li>
             <li>DBFlute Intro: decomment, database comment not displayed when conflict with database comment #269 <span class="frm">*前回パッチ</span></li>
