--- a/web/ja/manual/topic/friends/eclipse/coding/templates.html
+++ b/web/ja/manual/topic/friends/eclipse/coding/templates.html
@@ -46,8 +46,9 @@ String sea = ...
 }
 </code></pre>
 	<p>
-		独自に追加もできます。例えば、DBFluteオリジナルの _ll でLambda表現を補完してみましょう。
+		独自に追加もできます。例えば、DBFluteオリジナルの補完テンプレートを入れていれば、_ll でLambda表現を補完できます。
 	</p>
+	<div class="relatedpage"><a href="../../../../../tutorial/eclipse/dfclipsecomp.html">DBFluteのEclipseコード補完</a></div>
 <pre><span class="codetitle">e.g. DBFluteオリジナルの_llの補完テンプレート @Java</span><code>
 <span class="attribute">memberBhv</span>.selectList(<span class="literal">_ll</span>) <span class="comment">// _ll, control+space, enter</span>
 　↓↓↓
