DBFlute Engine: Classification, add various characters e.g. chuten to JavaNameFilter #279

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,7 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: Classification, add various characters e.g. chuten to JavaNameFilter #279 <span class="frm">*2025/08/xxパッチ</span></li>
             <li>DBFlute Engine: Classification, add full-with ! to JavaNameFilter #278 <span class="frm">*2025/08/17パッチ</span></li>
             <li>DBFlute Runtime: DBMeta, StructuralReferrerInfo #260</li>
             <li>DBFlute Runtime: improve DBMeta, comment and new items #259</li>
