to codeStyle/Project.xml

--- a/web/ja/manual/topic/friends/intellij/index.html
+++ b/web/ja/manual/topic/friends/intellij/index.html
@@ -176,7 +176,7 @@
 	</p>
 	<dl class="longkeymainlist">
 		<dt><a href="https://github.com/lastaflute/lastaflute-example-harbor/blob/master/.idea/codeStyles/codeStyleConfig.xml">codeStyleConfig.xml</a></dt><dd>コードスタイルのコンフィグ (Project.xmlを参照)</dd>
-		<dt><a href="https://github.com/lastaflute/lastaflute-example-harbor/blob/master/.idea/codeStyles/Project.xml">codeStyleSettings.xml</a></dt><dd>調整されたプロジェクトのコードフォーマットの設定</dd>
+		<dt><a href="https://github.com/lastaflute/lastaflute-example-harbor/blob/master/.idea/codeStyles/Project.xml">codeStyle/Project.xml</a></dt><dd>調整されたプロジェクトのコードフォーマットの設定</dd>
 		<dt><a href="https://github.com/lastaflute/lastaflute-example-harbor/blob/master/.idea/saveactions_settings.xml">saveactions_settings.xml</a></dt><dd>Save Actinosの設定</dd>
 	</dl>
 	<p>
