fix intellj live template key

--- a/web/ja/tutorial/handson/section02.html
+++ b/web/ja/tutorial/handson/section02.html
@@ -112,7 +112,8 @@ PROJECT_ROOT
 	</p>
 	<dl class="longvaluemainlist">
 		<dt>Eclipse</dt><dd>_test <span class="frm">※ドキュメント上の説明は、こちらをベースに書いています</span></dd>
-		<dt>IntelliJ</dt><dd>_utest</dd>
+		<dt>IntelliJ</dt><dd>_test <span class="frm">※Eclipseと同じ</span></dd>
+		<dt>VSCode</dt><dd>(補完なし)<span class="frm">※手打ちで...</span></dd>
 	</dl>
 	<p>
 		_test と打って ctrl + space して enter するとテストメソッドの雛形が作成されます。
