--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,9 +33,10 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
-            <li>DBFlute Engine: decomment alias as shalias #293 <span class="frm">*2025/11/25パッチ</span></li>
-            <li>DBFlute Engine: HistoryHTML, deprecatedTable display #289 <span class="frm">*2025/11/25パッチ</span></li>
-            <li>DBFlute Engine: SchemaSyncCheck, isReversePreviousNext #288 <span class="frm">*2025/11/25パッチ</span></li>
+            <li>DBFlute Engine: SchemaHTML, CLS top comment line-separated #286 <span class="frm">*2025/11/26パッチ</span></li>
+            <li>DBFlute Engine: decomment alias as shalias #293 <span class="frm">*2025/11/26パッチ</span></li>
+            <li>DBFlute Engine: HistoryHTML, deprecatedTable display #289 <span class="frm">*2025/10/29パッチ</span></li>
+            <li>DBFlute Engine: SchemaSyncCheck, isReversePreviousNext #288 <span class="frm">*2025/10/29パッチ</span></li>
             <li>DBFlute Intro: decomment, non-pickup option isSuppressDecommentPickup in documentMap.dfprop #281 <span class="frm">*2025/09/30頃パッチ</span></li>
             <li>DBFlute Engine: Classification, add various characters e.g. chuten to JavaNameFilter #279 <span class="frm">*2025/08/17頃パッチ</span></li>
             <li>DBFlute Engine: Classification, add full-with ! to JavaNameFilter #278 <span class="frm">*2025/08/17パッチ</span></li>
