--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,7 +33,11 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
-            <li>DBFlute Engine: SchemaHTML, CLS top comment line-separated #286 <span class="frm">*2025/11/26パッチ</span></li>
+            <li>DBFlute Engine: BehaviorFilter should be before dateUpdateAdjuster #303 <span class="frm">*2025/12/31パッチ</span></li>
+            <li>DBFlute Engine: SchemaHTML, CLS top comment line-separated #286 <span class="frm">*2025/12/31パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema, arrangeBeforeReps filter text #301 <span class="frm">*2025/12/31パッチ</span></li>
+            <li>DBFlute Engine: SchemaHTML, show Alias column if at least one shalias exists #296 <span class="frm">*2025/12/31パッチ</span></li>
+            <li>DBFlute Engine: generate table name swtiching for genba fitting #295 <span class="frm">*2025/12/31パッチ</span></li>
             <li>DBFlute Engine: decomment alias as shalias #293 <span class="frm">*2025/11/26パッチ</span></li>
             <li>DBFlute Engine: HistoryHTML, deprecatedTable display #289 <span class="frm">*2025/10/29パッチ</span></li>
             <li>DBFlute Engine: SchemaSyncCheck, isReversePreviousNext #288 <span class="frm">*2025/10/29パッチ</span></li>
