--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,12 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: versionNoTableExceptList on optimisticLockMap of littleAdjustmentMap #320 <span class="frm">*2026/01/14パッチ</span></li>
+            <li>DBFlute Engine: isUnevenCommonColumnRecognized on commonColumnMap #319 <span class="frm">*2026/01/14パッチ</span></li>
+            <li>DBFlute Engine: handling default constraint as empty string #315 <span class="frm">*2026/01/14パッチ</span></li>
+            <li>DBFlute Engine: SchemaPolicyCheck, additionalFK, realFK #314 <span class="frm">*2026/01/11パッチ</span></li>
+            <li>DBFlute Engine: SchemaPolicyCheck, differences between ReplaceSchema and Doc #313 <span class="frm">*2026/01/11パッチ</span></li>
+            <li>DBFlute Engine: SchemaHTML, show total column count #311 <span class="frm">*2026/01/11パッチ</span></li>
             <li>DBFlute Engine: dbCommentOnAliasBasisOptionMap, forcedAliasBasisColumnListMap #310 <span class="frm">*2026/01/08パッチ</span></li>
             <li>DBFlute Engine: dbCommentOnAliasBasisOptionMap, forcedAliasBasisTableList #309 <span class="frm">*2026/01/08パッチ</span></li>
             <li>DBFlute Engine: dbCommentOnAliasBasisOptionMap, aliasBasisIfFirstDateAfter #308 <span class="frm">*2026/01/08パッチ</span></li>
