--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -27,6 +27,34 @@
 	<h1>Changelog</h1>
 	${indexlist}
 
+<!-- prepare
+      <div class="release">
+        <h2>DBFlute-1.3.2 <span class="frm">※Java8</span></h2>
+        <p class="releasedate">2026/xx/xx</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>DBFlute Runtime: DfTypeUtil.to[Any]DateTime() keeps nanos #318</li>
+            <li>DBFlute Runtime: keep selected microsecond from DATETIME column #317</li>
+            <li>DBFlute Engine: versionNoTableExceptList on optimisticLockMap of littleAdjustmentMap #320 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: isUnevenCommonColumnRecognized on commonColumnMap #319 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: handling default constraint as empty string #315 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: SchemaPolicyCheck, additionalFK, realFK #314 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: SchemaPolicyCheck, differences between ReplaceSchema and Doc #313 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: SchemaHTML, show total column count #311 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: dbCommentOnAliasBasisOptionMap, forcedAliasBasisColumnListMap #310 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: dbCommentOnAliasBasisOptionMap, forcedAliasBasisTableList #309 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: dbCommentOnAliasBasisOptionMap, aliasBasisIfFirstDateAfter #308 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: SchemaPolicyCheck, column default constraint determination #307 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: SchemaPolicyCheck, column commonColumn determination #306 <span class="frm">*前回パッチ</span></li>
+          </ul>
+          <h3>BUG</h3>
+          <ul>
+            <li>DBFlute Engine: optimisticLockMap on littleAdjustmentMap, enabled #321 <span class="frm">*前回パッチ</span></li>
+          </ul>
+        </div>
+      </div>
+ -->
       <div class="release">
         <h2>DBFlute-1.3.1 <span class="frm">※Java8</span></h2>
         <p class="releasedate">2026/01/01</p>
@@ -59,6 +87,7 @@
           </ul>
           <h3>BUG</h3>
           <ul>
+            <li>DBFlute Engine: optimisticLockMap on littleAdjustmentMap, enabled #321 <span class="frm">*2026/01/14パッチ</span></li>
           </ul>
         </div>
       </div>
