--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -61,6 +61,8 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Intro: SchemaHTML, search textbox shortcut #285 <span class="frm">*2026/01/17パッチ</span></li>
+            <li>DBFlute Intro: first shalias without area, alias display message #298 <span class="frm">*2026/01/17パッチ</span></li>
             <li>DBFlute Engine: versionNoTableExceptList on optimisticLockMap of littleAdjustmentMap #320 <span class="frm">*2026/01/14パッチ</span></li>
             <li>DBFlute Engine: isUnevenCommonColumnRecognized on commonColumnMap #319 <span class="frm">*2026/01/14パッチ</span></li>
             <li>DBFlute Engine: handling default constraint as empty string #315 <span class="frm">*2026/01/14パッチ</span></li>
