--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -61,6 +61,11 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: ReplaceSchema, conventionalTakeAssert, nullOnlyColumn #327 <span class="frm">*2026/01/23パッチ</span></li>
+            <li>DBFlute Engine: LoadDataReverse, myOriginDate synchronization #326 <span class="frm">*2026/01/23パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema, DateAdjustment, myOriginDate #325 <span class="frm">*2026/01/23パッチ</span></li>
+            <li>DBFlute Engine: AlterCheck on MySQL, diff datetime precision e.g. DATETIME(3) #323 <span class="frm">*2026/01/23パッチ</span></li>
+            <li>DBFlute Engine: SchemaHTML of MySQL, show datetime precision e.g. DATETIME(3) #322 <span class="frm">*2026/01/23パッチ</span></li>
             <li>DBFlute Intro: SchemaHTML, search textbox shortcut #285 <span class="frm">*2026/01/17パッチ</span></li>
             <li>DBFlute Intro: first shalias without area, alias display message #298 <span class="frm">*2026/01/17パッチ</span></li>
             <li>DBFlute Engine: versionNoTableExceptList on optimisticLockMap of littleAdjustmentMap #320 <span class="frm">*2026/01/14パッチ</span></li>
